dive into more possible additives #5

--- a/code/additives.ipynb
+++ b/code/additives.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +50,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_additives(model, base_medium):\n",
+    "    with model:\n",
+    "        medium = model.medium\n",
+    "        model.medium = base_medium\n",
+    "        sol = model.optimize()      \n",
+    "    base_growth = sol.objective_value\n",
+    "    print(base_growth)\n",
+    "        \n",
+    "    enhancement = {}\n",
+    "    for ex in list(model.exchanges):\n",
+    "        with model:\n",
+    "            medium = model.medium\n",
+    "            base_medium[ex.id] = 10.0\n",
+    "            model.medium = base_medium\n",
+    "            sol = model.optimize()\n",
+    "            if sol.objective_value > base_growth:\n",
+    "                enhancement[ex.id] = sol.objective_value - base_growth\n",
+    "            base_medium.pop(ex.id)\n",
+    "    \n",
+    "    enh = pd.DataFrame(enhancement.items(), columns=['exchange', 'diff']).sort_values(by=['diff'], ascending=False)\n",
+    "    \n",
+    "    return enh"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -58,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +113,7 @@
        "                <td><strong>Name</strong></td><td></td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x07fe8013768e0</td>\n",
+       "                <td>0x07fe7c1660af0</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Stoichiometry</strong></td>\n",
        "                <td>\n",
@@ -101,10 +131,10 @@
        "        "
       ],
       "text/plain": [
-       "<Reaction Growth at 0x7fe8013768e0>"
+       "<Reaction Growth at 0x7fe7c1660af0>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +154,7 @@
        "0.5579056701595518"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +256,7 @@
        "3     EX_1ag160_e  0.099626"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,53 +292,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.5522447060984086"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "with model:\n",
-    "    medium = model.medium\n",
-    "    model.medium = CGXII_comp_15\n",
-    "    sol = model.optimize()\n",
-    "    \n",
-    "base_growth = sol.objective_value\n",
-    "base_growth"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "enhancement = {}\n",
-    "for ex in list(model.exchanges):\n",
-    "    with model:\n",
-    "        medium = model.medium\n",
-    "        CGXII_comp_15[ex.id] = 10.0\n",
-    "        model.medium = CGXII_comp_15\n",
-    "        sol = model.optimize()\n",
-    "        if sol.objective_value > base_growth:\n",
-    "            enhancement[ex.id] = sol.objective_value - base_growth\n",
-    "        CGXII_comp_15.pop(ex.id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fda_1197\n",
+      "0.5522447060984086\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -373,14 +367,24 @@
        "5  EX_1ag182d9d12_e  0.098615"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "enh = pd.DataFrame(enhancement.items(), columns=['exchange', 'diff'])\n",
-    "enh.sort_values(by=['diff'], ascending=False).head()#.to_csv('../analysis/additives/Cstr_15_adds.csv', index=False)"
+    "print(model.id)\n",
+    "enh = find_additives(model, CGXII_comp_15)\n",
+    "enh.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enh.to_csv('../analysis/additives/Cstr_15_adds.csv', index=False)"
    ]
   },
   {
@@ -392,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,56 +406,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fda_1054\n",
+      "0.5485482951479398\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>exchange</th>\n",
+       "      <th>diff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>EX_ascb__L_e</td>\n",
+       "      <td>0.195910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>EX_25dkglcn_e</td>\n",
+       "      <td>0.186115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>EX_12dgr160_e</td>\n",
+       "      <td>0.097955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>EX_1ag160_e</td>\n",
+       "      <td>0.097955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>EX_1ag180_e</td>\n",
+       "      <td>0.097955</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0.5485482951479398"
+       "         exchange      diff\n",
+       "46   EX_ascb__L_e  0.195910\n",
+       "6   EX_25dkglcn_e  0.186115\n",
+       "0   EX_12dgr160_e  0.097955\n",
+       "2     EX_1ag160_e  0.097955\n",
+       "3     EX_1ag180_e  0.097955"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "with model:\n",
-    "    medium = model.medium\n",
-    "    model.medium = CGXII_comp_14\n",
-    "    sol = model.optimize()\n",
-    "    \n",
-    "base_growth = sol.objective_value\n",
-    "base_growth"
+    "print(model.id)\n",
+    "enh = find_additives(model, CGXII_comp_14)\n",
+    "enh.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
-    "enhancement = {}\n",
-    "for ex in list(model.exchanges):\n",
-    "    with model:\n",
-    "        medium = model.medium\n",
-    "        CGXII_comp_14[ex.id] = 10.0\n",
-    "        model.medium = CGXII_comp_14\n",
-    "        sol = model.optimize()\n",
-    "        if sol.objective_value > base_growth:\n",
-    "            enhancement[ex.id] = sol.objective_value - base_growth\n",
-    "        CGXII_comp_14.pop(ex.id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "enh = pd.DataFrame(enhancement.items(), columns=['exchange', 'diff'])\n",
-    "enh.sort_values(by=['diff'], ascending=False).to_csv('../analysis/additives/Cstr_14_adds.csv', index=False)"
+    "enh.to_csv('../analysis/additives/Cstr_14_adds.csv', index=False)"
    ]
   }
  ],
