--- a/code/media.ipynb
+++ b/code/media.ipynb
@@ -691,7 +691,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`rnam`, `nac` and `ncam` only exist in the cytosol thus we cannot simulate the replacement of `nmn` by nicotinic acid (`nac`) but it is work a try since it is included in the biosynthesis and available in the lab."
+    "`rnam`, `nac` and `ncam` only exist in the cytosol thus we cannot simulate the replacement of `nmn` by nicotinic acid (`nac`) but it is worth a try since it is included in the biosynthesis and available in the lab."
    ]
   },
   {
@@ -1049,16 +1049,11 @@
    "source": [
     "Seems to be part of the energy metabolism???"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.4 ('refinegems-IHVxS0TF')",
+   "display_name": "Python 3.9.13",
    "language": "python",
    "name": "python3"
   },
@@ -1072,12 +1067,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "05b03929f31a3c7197b7c2cea0f190a9aa2e5c2b923ad8f41e4c618b018e4321"
+    "hash": "b335ed1da5a1ff03f60c6f2b8d73ad245c1a6cb27799af2b559ab4e2e6d580ce"
    }
   }
  },
