--- a/code/additives.ipynb
+++ b/code/additives.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,11 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CasA = rg.growth.load_all_media_from_db('../../refinegems/data/media_db.csv')[9]['BiGG_EX'].to_list()"
+    "CasA = rg.growth.load_all_media_from_db('../../refinegems/data/media_db.csv')[9]['BiGG_EX'].to_list()\n",
+    "CGXII = pd.read_csv('../analysis/CGXII_base_medium/CGXII.csv').set_index('exchange').to_dict()['flux']"
    ]
   },
   {
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,20 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MLTG1: h2o_c + malttr_c --> glc__D_c + malt_c\n",
-      "MTI: tre_c <=> malt_c\n",
-      "AMALT1: malt_c + malttr_c --> glc__D_c + maltttr_c\n",
-      "AMALT3: malt_c + maltpt_c --> glc__D_c + malthx_c\n",
-      "AMALT4: malt_c + malthx_c --> glc__D_c + malthp_c\n",
       "MALTabc: atp_c + h2o_c + malt_e --> adp_c + h_c + malt_c + pi_c\n",
-      "AMALT2: malt_c + maltttr_c --> glc__D_c + maltpt_c\n"
+      "AMALT1: malt_c + malttr_c --> glc__D_c + maltttr_c\n",
+      "MLTG1: h2o_c + malttr_c --> glc__D_c + malt_c\n",
+      "AMALT4: malt_c + malthx_c --> glc__D_c + malthp_c\n",
+      "AMALT2: malt_c + maltttr_c --> glc__D_c + maltpt_c\n",
+      "AMALT3: malt_c + maltpt_c --> glc__D_c + malthx_c\n",
+      "MTI: tre_c <=> malt_c\n"
      ]
     }
    ],
@@ -142,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -155,9 +156,9 @@
       "| exchange    |     diff |\n",
       "|:------------|---------:|\n",
       "| EX_malthp_e | 2.03237  |\n",
+      "| EX_tre_e    | 0.478205 |\n",
       "| EX_sucr_e   | 0.478205 |\n",
       "| EX_malt_e   | 0.478205 |\n",
-      "| EX_tre_e    | 0.478205 |\n",
       "| EX_lcts_e   | 0.418429 |\n"
      ]
     }
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -196,6 +197,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'EX_nh4_e': 10.0,\n",
+       " 'EX_so4_e': 10.0,\n",
+       " 'EX_k_e': 10.0,\n",
+       " 'EX_pi_e': 10.0,\n",
+       " 'EX_urea_e': 10.0,\n",
+       " 'EX_ca2_e': 10.0,\n",
+       " 'EX_cl_e': 10.0,\n",
+       " 'EX_mg2_e': 10.0,\n",
+       " 'EX_fe2_e': 10.0,\n",
+       " 'EX_mn2_e': 10.0,\n",
+       " 'EX_cu2_e': 10.0,\n",
+       " 'EX_zn2_e': 10.0,\n",
+       " 'EX_glc__D_e': 10.0,\n",
+       " 'EX_h2o_e': 10.0,\n",
+       " 'EX_o2_e': 20.0,\n",
+       " 'EX_h_e': 10.0}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CGXII_base = CGXII_comp_16.copy()\n",
+    "for metab, flux in CGXII_comp_16.items():\n",
+    "    if metab not in CGXII.keys():\n",
+    "        CGXII_base.pop(metab)\n",
+    "CGXII_base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Growth rate with additives: 0.0\n",
+      "Doubling time with additives: 2750479021271774.5 min\n"
+     ]
+    }
+   ],
+   "source": [
+    "enhanced_growth(model, CGXII_base, CasA)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -204,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -293,6 +351,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'EX_nh4_e': 10.0,\n",
+       " 'EX_so4_e': 10.0,\n",
+       " 'EX_k_e': 10.0,\n",
+       " 'EX_pi_e': 10.0,\n",
+       " 'EX_urea_e': 10.0,\n",
+       " 'EX_ca2_e': 10.0,\n",
+       " 'EX_cl_e': 10.0,\n",
+       " 'EX_mg2_e': 10.0,\n",
+       " 'EX_fe2_e': 10.0,\n",
+       " 'EX_mn2_e': 10.0,\n",
+       " 'EX_cu2_e': 10.0,\n",
+       " 'EX_zn2_e': 10.0,\n",
+       " 'EX_btn_e': 10.0,\n",
+       " 'EX_glc__D_e': 10.0,\n",
+       " 'EX_h2o_e': 10.0,\n",
+       " 'EX_o2_e': 20.0,\n",
+       " 'EX_h_e': 10.0}"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CGXII_base = CGXII_comp_15.copy()\n",
+    "for metab, flux in CGXII_comp_15.items():\n",
+    "    if metab not in CGXII.keys():\n",
+    "        CGXII_base.pop(metab)\n",
+    "CGXII_base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Growth rate with additives: -0.0\n",
+      "Doubling time with additives: -1.3582553683821924e+16 min\n"
+     ]
+    }
+   ],
+   "source": [
+    "enhanced_growth(model, CGXII_base, CasA)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -301,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -325,8 +441,8 @@
       "|:------------|---------:|\n",
       "| EX_malthp_e | 1.99828  |\n",
       "| EX_sucr_e   | 0.470184 |\n",
-      "| EX_malt_e   | 0.470184 |\n",
       "| EX_tre_e    | 0.470184 |\n",
+      "| EX_malt_e   | 0.470184 |\n",
       "| EX_lcts_e   | 0.411411 |\n"
      ]
     }
@@ -347,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -383,6 +499,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'EX_nh4_e': 10.0,\n",
+       " 'EX_so4_e': 10.0,\n",
+       " 'EX_k_e': 10.0,\n",
+       " 'EX_pi_e': 10.0,\n",
+       " 'EX_urea_e': 10.0,\n",
+       " 'EX_ca2_e': 10.0,\n",
+       " 'EX_cl_e': 10.0,\n",
+       " 'EX_mg2_e': 10.0,\n",
+       " 'EX_fe2_e': 10.0,\n",
+       " 'EX_mn2_e': 10.0,\n",
+       " 'EX_cu2_e': 10.0,\n",
+       " 'EX_zn2_e': 10.0,\n",
+       " 'EX_btn_e': 10.0,\n",
+       " 'EX_glc__D_e': 10.0,\n",
+       " 'EX_h2o_e': 10.0,\n",
+       " 'EX_o2_e': 20.0,\n",
+       " 'EX_h_e': 10.0}"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CGXII_base = CGXII_comp_14.copy()\n",
+    "for metab, flux in CGXII_comp_14.items():\n",
+    "    if metab not in CGXII.keys():\n",
+    "        CGXII_base.pop(metab)\n",
+    "CGXII_base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Growth rate with additives: 0.0\n",
+      "Doubling time with additives: 8.554903579813985e+17 min\n"
+     ]
+    }
+   ],
+   "source": [
+    "enhanced_growth(model, CGXII_base, CasA)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -391,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +591,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/s0/m197rw591kxcl13y56pqhf9m0000gs/T/ipykernel_1242/4155444981.py:7: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "/var/folders/s0/m197rw591kxcl13y56pqhf9m0000gs/T/ipykernel_53527/4155444981.py:7: RuntimeWarning: divide by zero encountered in double_scalars\n",
       "  dt = (np.log(2) / sol.objective_value) * 60\n"
      ]
     },
@@ -450,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +643,7 @@
      "output_type": "stream",
      "text": [
       "Growth rate without additives: -0.0\n",
-      "Doubling time without additives: -3.3398051073015492e+16 min\n",
+      "Doubling time without additives: -1.8774713838470752e+30 min\n",
       "| exchange    |     diff |\n",
       "|:------------|---------:|\n",
       "| EX_s_e      | 0.622009 |\n",
@@ -494,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -557,20 +731,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Growth rate with additives: 1.5266\n",
-      "Doubling time with additives: 27.24 min\n"
+      "Growth rate with additives: 0.7301\n",
+      "Doubling time with additives: 56.96 min\n"
      ]
     }
    ],
    "source": [
-    "enhanced_growth(model, CGXII_comp_17, ['EX_raffin_e'])"
+    "enhanced_growth(model, CGXII_comp_17, CasA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'EX_nh4_e': 10.0,\n",
+       " 'EX_so4_e': 10.0,\n",
+       " 'EX_k_e': 10.0,\n",
+       " 'EX_pi_e': 10.0,\n",
+       " 'EX_urea_e': 10.0,\n",
+       " 'EX_ca2_e': 10.0,\n",
+       " 'EX_cl_e': 10.0,\n",
+       " 'EX_mg2_e': 10.0,\n",
+       " 'EX_fe2_e': 10.0,\n",
+       " 'EX_mn2_e': 10.0,\n",
+       " 'EX_cu2_e': 10.0,\n",
+       " 'EX_zn2_e': 10.0,\n",
+       " 'EX_glc__D_e': 10.0,\n",
+       " 'EX_h2o_e': 10.0,\n",
+       " 'EX_o2_e': 20.0,\n",
+       " 'EX_h_e': 10.0}"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CGXII_base = CGXII_comp_17.copy()\n",
+    "for metab, flux in CGXII_comp_17.items():\n",
+    "    if metab not in CGXII.keys():\n",
+    "        CGXII_base.pop(metab)\n",
+    "CGXII_base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Growth rate with additives: 0.0\n",
+      "Doubling time with additives: 14843514922900.7 min\n"
+     ]
+    }
+   ],
+   "source": [
+    "enhanced_growth(model, CGXII_base, CasA)"
    ]
   }
  ],
@@ -590,7 +821,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4 (v3.9.4:1f2e3088f3, Apr  4 2021, 12:32:44) \n[Clang 6.0 (clang-600.0.57)]"
+   "version": "3.9.4"
   },
   "orig_nbformat": 4,
   "vscode": {
