--- a/code/analysis/media.ipynb
+++ b/code/analysis/media.ipynb
@@ -1053,7 +1053,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13",
+   "display_name": "refinegems-IHVxS0TF",
    "language": "python",
    "name": "python3"
   },
@@ -1067,12 +1067,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Oct 13 2022, 16:12:30) \n[Clang 12.0.0 ]"
+   "version": "3.9.4 (v3.9.4:1f2e3088f3, Apr  4 2021, 12:32:44) \n[Clang 6.0 (clang-600.0.57)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b335ed1da5a1ff03f60c6f2b8d73ad245c1a6cb27799af2b559ab4e2e6d580ce"
+    "hash": "05b03929f31a3c7197b7c2cea0f190a9aa2e5c2b923ad8f41e4c618b018e4321"
    }
   }
  },
