rename and restructure for reproducibility #4

--- a/code/analysis/exploration_CGXII.ipynb
+++ b/code/analysis/exploration_CGXII.ipynb
@@ -1,10 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Medium exploration\n",
+    "Author: Famke Baeuerle\n",
+    "\n",
     "This serves as notebook to look at different metabolites or reactions or ... in the GEMs present in this repository. "
    ]
   },
