--- a/code/analysis/growth_M9.ipynb
+++ b/code/analysis/growth_M9.ipynb
@@ -5,7 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simulation of M9 medium with and without Casamino acids"
+    "# Simulation of M9 medium with and without Casamino acids\n",
+    "Author: Famke Baeuerle"
    ]
   },
   {
