--- a/code/curation/wetlab_transfer.ipynb
+++ b/code/curation/wetlab_transfer.ipynb
@@ -1,10 +1,12 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Wetlab transfer\n",
+    "Author: Famke Baeuerle\n",
     "\n",
     "This notebook serves as collection of changes to the models that came from wetlab data and expertise."
    ]
