--- a/code/analysis/additives_CGXII.ipynb
+++ b/code/analysis/additives_CGXII.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "source": [
     "# Growth enhancing additives on CGXII medium\n",
+    "Author: Famke Baeuerle\n",
     "\n",
     "This notebook holds growth simulation with different growth enhancing metabolites for all strains."
    ]
