update model filenames to adhere to strain names #1 #3

--- a/code/analysis/additives_CGXII.ipynb
+++ b/code/analysis/additives_CGXII.ipynb
@@ -140,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_16.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/Cstr_1115.xml')\n",
     "CGXII_comp_16 = pd.read_csv('../../analysis/CGXII_base_medium/CGXII_comp_16.csv').set_index('exchange').to_dict()['flux']"
    ]
   },
@@ -238,7 +238,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_16.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/Cstr_1115.xml')\n",
     "enhanced_growth(model, CGXII_comp_16, CasA)"
    ]
   },
@@ -293,13 +293,13 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[39m=\u001b[39m rg\u001b[39m.\u001b[39mio\u001b[39m.\u001b[39mload_model_cobra(\u001b[39m'\u001b[39m\u001b[39m../../models/Cstr_16.xml\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m enhanced_growth(model, CGXII_base, CasA)\n\u001b[1;32m      3\u001b[0m \u001b[39mprint\u001b[39m(CasA)\n",
+      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[39m=\u001b[39m rg\u001b[39m.\u001b[39mio\u001b[39m.\u001b[39mload_model_cobra(\u001b[39m'\u001b[39m\u001b[39m../../models/Cstr_1115.xml\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m enhanced_growth(model, CGXII_base, CasA)\n\u001b[1;32m      3\u001b[0m \u001b[39mprint\u001b[39m(CasA)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'rg' is not defined"
      ]
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_16.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/Cstr_1115.xml')\n",
     "enhanced_growth(model, CGXII_base, CasA)"
    ]
   },
@@ -316,7 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_15.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/Cstr_1197.xml')\n",
     "CGXII_comp_15 = pd.read_csv('../../analysis/CGXII_base_medium/CGXII_comp_15.csv').set_index('exchange').to_dict()['flux']"
    ]
   },
@@ -397,7 +397,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_15.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/Cstr_1197.xml')\n",
     "enhanced_growth(model, CGXII_comp_15, CasA)"
    ]
   },
@@ -436,7 +436,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_15.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/Cstr_1197.xml')\n",
     "enhanced_growth(model, CGXII_base, CasA)"
    ]
   },
@@ -453,7 +453,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_14.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/Cstr_TS.xml')\n",
     "CGXII_comp_14 = pd.read_csv('../../analysis/CGXII_base_medium/CGXII_comp_14.csv').set_index('exchange').to_dict()['flux']"
    ]
   },
@@ -527,7 +527,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_14.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/Cstr_TS.xml')\n",
     "enhanced_growth(model, CGXII_comp_14, CasA)"
    ]
   },
@@ -559,7 +559,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_14.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/Cstr_TS.xml')\n",
     "enhanced_growth(model, CGXII_base, CasA)"
    ]
   },
@@ -576,7 +576,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_17.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/Cstr_1116.xml')\n",
     "CGXII_comp_17 = pd.read_csv('../../analysis/CGXII_base_medium/CGXII_comp_17.csv').set_index('exchange').to_dict()['flux']"
    ]
   },
@@ -688,7 +688,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_17.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/Cstr_1116.xml')\n",
     "enhanced_growth(model, CGXII_comp_17, CasA)"
    ]
   },
@@ -752,7 +752,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_17.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/Cstr_1116.xml')\n",
     "enhanced_growth(model, CGXII_comp_17, CasA)"
    ]
   },
@@ -793,7 +793,7 @@
     }
    ],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_17.xml')\n",
+    "model = rg.io.load_model_cobra('../../models/Cstr_1116.xml')\n",
     "enhanced_growth(model, CGXII_base, CasA)"
    ]
   }
