--- a/code/analysis/exploration_CGXII.ipynb
+++ b/code/analysis/exploration_CGXII.ipynb
@@ -49,7 +49,7 @@
     }
    ],
    "source": [
-    "model = rg.load.load_model_cobra('../models/Cstr_14.xml')"
+    "model = rg.load.load_model_cobra('../models/Cstr_TS.xml')"
    ]
   },
   {
@@ -438,7 +438,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "model = rg.load.load_model_cobra('../models/Cstr_16.xml')"
+    "model = rg.load.load_model_cobra('../models/Cstr_1115.xml')"
    ]
   },
   {
@@ -626,7 +626,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.load.load_model_cobra('../models/Cstr_17.xml')"
+    "model = rg.load.load_model_cobra('../models/Cstr_1116.xml')"
    ]
   },
   {
@@ -710,7 +710,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.load.load_model_cobra('../models/Cstr_15.xml')"
+    "model = rg.load.load_model_cobra('../models/Cstr_1197.xml')"
    ]
   },
   {
