--- a/code/analysis/growth_M9.ipynb
+++ b/code/analysis/growth_M9.ipynb
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.load.load_model_cobra('../../models/Cstr_15.xml')"
+    "model = rg.load.load_model_cobra('../../models/Cstr_1197.xml')"
    ]
   },
   {
@@ -246,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.load.load_model_cobra('../../models/Cstr_14.xml')"
+    "model = rg.load.load_model_cobra('../../models/Cstr_TS.xml')"
    ]
   },
   {
@@ -398,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.load.load_model_cobra('../../models/Cstr_16.xml')"
+    "model = rg.load.load_model_cobra('../../models/Cstr_1115.xml')"
    ]
   },
   {
@@ -550,7 +550,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.load.load_model_cobra('../../models/Cstr_17.xml')\n",
+    "model = rg.load.load_model_cobra('../../models/Cstr_1116.xml')\n",
     "#M9_med['EX_nmn_e'] = 10.0"
    ]
   },
