--- a/code/curation/apply_mcc.ipynb
+++ b/code/curation/apply_mcc.ipynb
@@ -16983,7 +16983,7 @@
     }
    ],
    "source": [
-    "model_path = '../../models/Cstr_17.xml'\n",
+    "model_path = '../../models/Cstr_1116.xml'\n",
     "balancer = MassChargeCuration(model_path, run_optimization = True, update_ids = True, data_path='../../data/mcc/') #\n",
     "balancer.generate_visual_report().show()"
    ]
@@ -17558,7 +17558,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = '../../models/Cstr_14.xml'\n",
+    "model_path = '../../models/Cstr_TS.xml'\n",
     "balancer = MassChargeCuration(model_path, run_optimization = True, update_ids = True, data_path='../../data/mcc/') #\n",
     "balancer.generate_visual_report().show()"
    ]
@@ -17589,7 +17589,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = '../../models/Cstr_15.xml'\n",
+    "model_path = '../../models/Cstr_1197.xml'\n",
     "balancer = MassChargeCuration(model_path, run_optimization = True, update_ids = True, data_path='../../data/mcc/') #\n",
     "balancer.generate_visual_report().show()"
    ]
@@ -17620,7 +17620,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = '../../models/Cstr_16.xml'\n",
+    "model_path = '../../models/Cstr_1115.xml'\n",
     "balancer = MassChargeCuration(model_path, run_optimization = True, update_ids = True, data_path='../../data/mcc/') #\n",
     "balancer.generate_visual_report().show()"
    ]
