--- a/code/curation/remove_duplicate_metabolites.ipynb
+++ b/code/curation/remove_duplicate_metabolites.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = rg.io.load_model_cobra('../../models/Cstr_14.xml')"
+    "model = rg.io.load_model_cobra('../../models/Cstr_TS.xml')"
    ]
   },
   {
@@ -110,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelpaths_to_change = ['../models/Cstr_14.xml', '../models/Cstr_15.xml', '../models/Cstr_16.xml', '../models/Cstr_17.xml']\n",
+    "modelpaths_to_change = ['../models/Cstr_TS.xml', '../models/Cstr_1197.xml', '../models/Cstr_1115.xml', '../models/Cstr_1116.xml']\n",
     "for mod in modelpaths_to_change:\n",
     "    model = rg.io.load_model_cobra(mod)\n",
     "    print(model.metabolites.get_by_id('cgly_c'))\n",
