--- a/code/curation/wetlab_transfer.ipynb
+++ b/code/curation/wetlab_transfer.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_and_annotate_exchange(all_models, modelpaths, metabolite):\n",
+    "    for model, path in zip(all_models, modelpaths):\n",
+    "        try:\n",
+    "            model.add_boundary(model.metabolites.get_by_id(metabolite), type=\"exchange\")\n",
+    "            cobra.io.write_sbml_model(model, path)\n",
+    "            model_annot = rg.io.load_model_libsbml(path)\n",
+    "            rea = model_annot.getReaction(f'R_EX_{metabolite}')\n",
+    "            rg.cvterms.add_cv_term_reactions(f'EX_{metabolite}', 'BIGG', rea)\n",
+    "            rg.io.write_to_file(model_annot, path)\n",
+    "            print(f'EX_{metabolite} added to {model.id}.')\n",
+    "        except (ValueError):\n",
+    "            print(f'EX_{metabolite} already exists in {model.id}.')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -48,15 +68,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "modelpaths = [\n",
-    "        '../../models/Cstr_14.xml', \n",
-    "        '../../models/Cstr_15.xml',\n",
-    "        '../../models/Cstr_16.xml',\n",
-    "        '../../models/Cstr_17.xml',\n",
+    "        '../../models/Cstr_TS.xml', \n",
+    "        '../../models/Cstr_1197.xml',\n",
+    "        '../../models/Cstr_1115.xml',\n",
+    "        '../../models/Cstr_1116.xml',\n",
     "        '../../models/Cstr_KC-Na-01.xml',\n",
     "        ]\n",
     "\n",
@@ -73,25 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PROt4: na1_e + pro__L_e --> na1_c + pro__L_c\n",
-      "NAt3_2: 2.0 h_e + na1_c --> 2.0 h_c + na1_e\n",
-      "NAabcO: atp_c + h2o_c + na1_c --> adp_c + h_c + na1_e + pi_c\n",
-      "GLUt4: glu__L_e + na1_e --> glu__L_c + na1_c\n",
-      "NAt3_15: 3.0 h_e + 2.0 na1_c --> 3.0 h_c + 2.0 na1_e\n",
-      "MALt5: mal__L_e + na1_e --> mal__L_p + na1_p\n",
-      "EX_na1_e: na1_e <=> \n",
-      "ALAt4: ala__L_e + na1_e --> ala__L_c + na1_c\n",
-      "NAt3_1: h_e + na1_c --> h_c + na1_e\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for rea in all_models[4].metabolites.get_by_id('na1_e').reactions:\n",
     "    print(rea)"
@@ -99,7 +103,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_and_annotate_exchange(all_models, modelpaths, 'na1_e')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Nickel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ni2_e\n",
+      "ni2_e\n",
+      "ni2_e\n",
+      "ni2_e\n",
+      "ni2_e\n"
+     ]
+    }
+   ],
+   "source": [
+    "for model in all_models:\n",
+    "    try:\n",
+    "        print(model.metabolites.get_by_id('ni2_e'))\n",
+    "    except (KeyError):\n",
+    "        print(f'Not in {model.id}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to add extracellular Nickel to the model of strain KC-Na-01."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <tr>\n",
+       "                <td><strong>Metabolite identifier</strong></td><td>ni2_e</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Name</strong></td><td>Nickel</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Memory address</strong></td>\n",
+       "                <td>0x07f82a99044f0</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Formula</strong></td><td>Ni</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Compartment</strong></td><td>e</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>In 3 reaction(s)</strong></td><td>\n",
+       "                    NI2tex, NIabc, EX_ni2_e</td>\n",
+       "            </tr>\n",
+       "        </table>"
+      ],
+      "text/plain": [
+       "<Metabolite ni2_e at 0x7f82a99044f0>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_models[0].metabolites.get_by_id('ni2_e')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_models[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ni2_e = cobra.Metabolite('ni2_e', formula='Ni', name='Nickel', compartment='e')\n",
+    "all_models[4].metabolites.add(ni2_e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -115,37 +228,122 @@
     }
    ],
    "source": [
-    "for model in all_models:\n",
-    "    try:\n",
-    "        model.add_boundary(model.metabolites.get_by_id('na1_e'), type=\"exchange\")\n",
-    "    except (ValueError):\n",
-    "        print(f'EX_na1_e already exists in {model.id}')"
+    "add_and_annotate_exchange(all_models, modelpaths, 'ni2_e')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Biotin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Modified model written to ../../models/Cstr_14.xml\n",
-      "Modified model written to ../../models/Cstr_15.xml\n",
-      "Modified model written to ../../models/Cstr_16.xml\n",
-      "Modified model written to ../../models/Cstr_17.xml\n",
-      "Modified model written to ../../models/Cstr_KC-Na-01.xml\n"
+      "btn_e\n",
+      "btn_e\n",
+      "Not in fda_1115\n",
+      "Not in fda_1116\n",
+      "Not in KC_Na_01\n"
      ]
     }
    ],
    "source": [
-    "for model, path in zip(all_models, modelpaths):\n",
-    "    cobra.io.write_sbml_model(model, path)\n",
-    "    model_annot = rg.io.load_model_libsbml(path)\n",
-    "    rea = model_annot.getReaction('R_EX_na1_e')\n",
-    "    rg.cvterms.add_cv_term_reactions('EX_na1_e', 'BIGG', rea)\n",
-    "    rg.io.write_to_file(model_annot, path)"
+    "for model in all_models:\n",
+    "    try:\n",
+    "        print(model.metabolites.get_by_id('btn_e'))\n",
+    "    except (KeyError):\n",
+    "        print(f'Not in {model.id}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to add extracellular biotin to 1115 (Cstr_16), 1116 (Cstr_17) and KC-Na-01 (Cstr_KC-Na-01)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <tr>\n",
+       "                <td><strong>Metabolite identifier</strong></td><td>btn_e</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Name</strong></td><td>Biotin</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Memory address</strong></td>\n",
+       "                <td>0x07f829929af70</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Formula</strong></td><td>C10H15N2O3S</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Compartment</strong></td><td>e</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>In 4 reaction(s)</strong></td><td>\n",
+       "                    BTNt2i, EX_btn_e, BTNTe, BTNt</td>\n",
+       "            </tr>\n",
+       "        </table>"
+      ],
+      "text/plain": [
+       "<Metabolite btn_e at 0x7f829929af70>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_models[0].metabolites.get_by_id('btn_e')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "btn_e = cobra.Metabolite('btn_e', formula='C10H15N2O3S', name='Biotin', compartment='e')\n",
+    "all_models[2].metabolites.add(btn_e)\n",
+    "all_models[3].metabolites.add(btn_e)\n",
+    "all_models[4].metabolites.add(btn_e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EX_btn_e already exists in fda_1054.\n",
+      "EX_btn_e already exists in fda_1197.\n",
+      "EX_btn_e already exists in fda_1115.\n",
+      "EX_btn_e already exists in fda_1116.\n",
+      "Modified model written to ../../models/Cstr_KC-Na-01.xml\n",
+      "EX_btn_e added to KC_Na_01.\n"
+     ]
+    }
+   ],
+   "source": [
+    "add_and_annotate_exchange(all_models, modelpaths, 'btn_e')"
    ]
   }
  ],
